--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,8 +3,12 @@
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
     <%= devise_error_messages! %>
     <div class="form-group">
-      <%= f.label :name %>
-      <%= f.text_field :name, :autofocus => true, class: 'form-control' %>
+      <%= f.label :nom %>
+      <%= f.text_field :nom, :autofocus => true, class: 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :prenom %>
+      <%= f.text_field :prenom, :autofocus => true, class: 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :email %>
@@ -31,6 +35,7 @@
         <%= f.password_field :current_password, class: 'form-control' %>
       </div>
     </fieldset>
+    <%= render partial:'appartenance', locals: {f: f} %>
     <%= f.submit 'Update', :class => 'button right' %>
   <% end %>
 </div>
