--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,10 +3,14 @@
     <h3>Sign up</h3>
     <%= devise_error_messages! %>
     <div class="form-group">
-      <%= f.label :name %>
-      <%= f.text_field :name, :autofocus => true, class: 'form-control' %>
+      <%= f.label :nom %>
+      <%= f.text_field :nom, :autofocus => true, class: 'form-control' %>
     </div>
     <div class="form-group">
+      <%= f.label :prenom %>
+      <%= f.text_field :prenom, :autofocus => true, class: 'form-control' %>
+    </div>
+    <div class="form-group"
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
     </div>
@@ -18,6 +22,7 @@
       <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
-     <%= f.submit 'Sign up', :class => 'button right' %>
+    <%= render partial:'appartenance', locals: {f: f} %>
+    <%= f.submit 'Sign up', :class => 'button right' %>
   <% end %>
 </div>
