--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,7 +21,7 @@
       <p>Leave these fields blank if you don't want to change your password.</p>
       <div class="form-group">
         <%= f.label :password %>
-        <%= f.password_field :password, :autocomplete => 'off', class: 'form-control' %>
+        <%= f.password_field :password, :autocomplete => 'off', value: '', class: 'form-control' %>
       </div>
       <div class="form-group">
         <%= f.label :password_confirmation %>
