--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
-<h3>User</h3>
-<p>Name: <%= @user.nom if @user.nom %></p>
+<h3>Utilisateur</h3>
+<p>Nom: <%= @user.nom if @user.nom %></p>
+<p>Téléphone: <%= @user.telephone if @user.telephone %></p>
 <p>Email: <%= @user.email if @user.email %></p>
