--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,14 +2,7 @@
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form'}) do |f| %>
     <h3>Sign up</h3>
     <%= devise_error_messages! %>
-    <div class="form-group">
-      <%= f.label :nom %>
-      <%= f.text_field :nom, :autofocus => true, class: 'form-control' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :prenom %>
-      <%= f.text_field :prenom, :autofocus => true, class: 'form-control' %>
-    </div>
+    <%= render partial:'info',  locals: {f: f} %>
     <div class="form-group"
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
@@ -22,7 +15,8 @@
       <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
     </div>
-    <%= render partial:'appartenance', locals: {f: f} %>
+    <!-- Appartenance est affectée par l'admin -->
+    <!-- %= render partial:'appartenance', locals: {f: f} % -->
     <%= f.submit 'Sign up', :class => 'button right' %>
   <% end %>
 </div>
