--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,9 +1,8 @@
 <%= render "shared/bandeau", titre: "Renvoyer le courriel de confirmation", texte: "" %>
-<div class="container">
+<div class="authform">
   <%= bootstrap_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
     <%= devise_error_messages! %>
     <%= f.email_field :email, autofocus: true %>
     <%= f.submit "Envoyer" %>
   <% end %>
-  <%= render "devise/shared/links" %>
 </div>
