--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,14 +1,10 @@
+<%= render "shared/bandeau", titre: "Changez votre mot de passe", texte: "" %>
 <div class="authform">
-  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-    <h3>Change your password</h3>
+  <%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
     <%= devise_error_messages! %>
     <%= f.hidden_field :reset_password_token %>
-    <div class="form-group">
-      <%= f.label :password, 'New password' %>
-        <%= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control' %>
-      <%= f.label :password_confirmation, 'Confirm new password' %>
-        <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
-    </div>
-     <%= f.submit 'Change my Password', :class => 'button right' %>
+    <%= f.password_field :password, autofocus: true, autocomplete: "off", label: "Nouveau mot de passe" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", label: "Confirmez votre nouveau mot de passe" %>
+    <%= f.submit "Changer mon mot de passe" %>
   <% end %>
 </div>
