--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,5 @@
+<%= render "shared/bandeau", titre: "Mise à jour", texte: "" %>
 <div class="authform">
-  <h3>Edit
-    <%= resource_name.to_s.humanize %></h3>
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
     <%= devise_error_messages! %>
     <%= render partial:'info',  locals: {f: f} %>
