--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
+<%= render "shared/bandeau", titre: "Inscription", texte: "" %>
 <div class="authform">
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :role => 'form'}) do |f| %>
-    <h3>Sign up</h3>
     <%= devise_error_messages! %>
     <%= render partial:'info',  locals: {f: f} %>
     <div class="form-group"
