--- a/app/views/fournisseurs/_form.html.erb
+++ b/app/views/fournisseurs/_form.html.erb
@@ -1,50 +1,12 @@
-<div class="authform">
-<%= form_for(@fournisseur, :html => { :role => 'form'}) do |f| %>
-  <% if @fournisseur.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@fournisseur.errors.count, "erreur") %> empêche la sauvegarde du fournisseur:</h2>
 
-      <ul>
-      <% @fournisseur.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
- <fieldset>
-  <div class="form-group">
-    <%= f.label :nom %><br>
-    <%= f.text_field :nom, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :telephone %><br>
-    <%= f.text_field :telephone, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :fax %><br>
-    <%= f.text_field :fax, class: 'form-control' %>
-  </div>
-   </fieldset>
-    <fieldset>
-  <div class="form-group">
-    <%= f.label :adresse_ligne1 %><br>
-    <%= f.text_field :adresse_ligne1, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :adresse_ligne2 %><br>
-    <%= f.text_field :adresse_ligne2, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :code_postal %><br>
-    <%= f.text_field :code_postal, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :ville %><br>
-    <%= f.text_field :ville, class: 'form-control' %>
-  </div>
-   </fieldset>
-  <div class="actions">
-    <%= f.submit 'Enregistrer', :class => 'button right' %>
-  </div>
-<% end %>
-</div>
+<%= bootstrap_form_for(@fournisseur) do |f| %>
+    <%= render 'shared/model_errors', modele: @fournisseur %>
+    <%= f.text_field :nom %>
+    <%= f.text_field :telephone %>
+    <%= f.text_field :fax %>
+    <%= f.text_field :adresse_ligne1 %>
+    <%= f.text_field :adresse_ligne2 %>
+    <%= f.text_field :code_postal %>
+    <%= f.text_field :ville %>
+    <%= f.submit  %>
+ <% end %>
