--- a/app/views/etablissements/edit.html.erb
+++ b/app/views/etablissements/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing etablissement</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @etablissement %> |
-<%= link_to 'Back', etablissements_path %>
+<%= render "shared/bandeau", titre: "Modification", texte: "Mise à jour d'un établissement" %>
+<div class="container">
+  <%= render 'form' %>
+  <%= destroy @etablissement %>
+</div>
