--- a/app/views/fournisseurs/_form.html.erb
+++ b/app/views/fournisseurs/_form.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container">
 <%= bootstrap_form_for(@fournisseur) do |f| %>
     <%= render 'shared/model_errors', modele: @fournisseur %>
     <%= f.text_field :nom %>
@@ -10,3 +10,4 @@
     <%= f.text_field :ville %>
     <%= f.submit  %>
  <% end %>
+</div>
