--- a/app/views/fournisseurs/edit.html.erb
+++ b/app/views/fournisseurs/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing fournisseur</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @fournisseur %> |
-<%= link_to 'Back', fournisseurs_path %>
+<%= render "shared/bandeau", titre: "Modification", texte: "Mise à jour du fournisseur" %>
+<div class="container">
+  <%= render 'form' %>
+  <%= destroy @fournisseur %>
+</div>
