--- a/app/views/fournisseurs/_form.html.erb
+++ b/app/views/fournisseurs/_form.html.erb
@@ -1,4 +1,3 @@
-<div class="container">
 <%= bootstrap_form_for(@fournisseur) do |f| %>
     <%= render 'shared/model_errors', modele: @fournisseur %>
     <%= f.text_field :nom %>
@@ -8,6 +7,5 @@
     <%= f.text_field :adresse_ligne2 %>
     <%= f.text_field :code_postal %>
     <%= f.text_field :ville %>
-    <%= f.submit  %>
+    <%= f.submit nil, class: 'btn btn-primary' %>
  <% end %>
-</div>
