--- a/app/views/fournisseurs/new.html.erb
+++ b/app/views/fournisseurs/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New fournisseur</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', fournisseurs_path %>
+<%= render "shared/bandeau", titre: "Nouveau Fournisseur", texte: "Création d'un nouveau Fournisseur" %>
+<div class="container">
+  <%= render 'form' %>
+</div>
