--- a/app/views/fournisseurs/show.html.erb
+++ b/app/views/fournisseurs/show.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/bandeau", titre: "Informations du Fournisseur", texte: "Liste des informations associées." %>
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -34,6 +36,8 @@
   <strong>Ville:</strong>
   <%= @fournisseur.ville %>
 </p>
-
+ <%= back etablissement_path(@etablissement) %>
+  <%= edit edit_etablissement_path(@etablissement) %>
+</div>
 <%= link_to 'Edit', edit_fournisseur_path(@fournisseur) %> |
 <%= link_to 'Back', fournisseurs_path %>
