--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,3 @@
-<% entreprise_id = SecureRandom.uuid %>
-<% entreprise_type = SecureRandom.uuid %>
 <td>
   <%= link_to user.email, user %>
 </td>
@@ -9,12 +7,8 @@
       <%= f.label :role, "Rôle" %>
       <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]},{}, id: "select_entreprise_#{user.id}") %>
     </div>
-    <div class="form-group">
-      <%= f.label :entreprise %>
-      <%= f.autocomplete_field :entreprise_nom,  autocomplete_user_entreprise_users_path, :update_elements => {:id => "##{entreprise_id}", :entreprise_type => "##{entreprise_type}"}, size: 75, class: 'form-control'%>
-      <%= f.hidden_field :entreprise_id, id: "#{entreprise_id}" %>
-      <%= f.hidden_field :entreprise_type, id: "#{entreprise_type}" %>
-    </div>
+    <%= render 'shared/fournisseur_autocomplete_field', f: f %>
+
     <%= f.submit 'Change Role', :class => 'btn btn-primary btn-xs', id: "submit_btn_user_#{user.id}" %>
   <% end %>
 </td>
