--- a/app/views/consultations/_market_fields.html.erb
+++ b/app/views/consultations/_market_fields.html.erb
@@ -5,7 +5,15 @@
   <div class="panel-body">
 <% market_fournisseur_id = SecureRandom.uuid %>
 <%= f.text_field :code, label: "Code du marché" %>
-<%= render 'shared/fournisseur_autocomplete_field', f: f %>
+
+
+<% fournisseur_id = SecureRandom.uuid %>
+<div class="form-group">
+  <%= f.label :entreprise %>
+  <%= f.autocomplete_field :fournisseur_nom,  autocomplete_user_fournisseur_users_path, :update_elements => {:id => "##{fournisseur_id}"}, size: 75, class: 'form-control'%>
+  <%= f.hidden_field :fournisseur_id, id: "#{fournisseur_id}" %>
+</div>
+
 
 <br/>
 <%= f.link_to_remove "Supprimer le marché" %>
