mise en place des tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <%= render 'layouts/navigation' %>
     </header>
     <main role="main">
-      <% if current_user %>
+      <% if current_user && current_user.entreprise %>
         <%= current_user.email %><br/>
         <%= current_user.entreprise.nom %>, (<%= current_user.entreprise_type.upcase %>)<br/>
       <% end %>
