--- a/app/views/fncs/edit.html.erb
+++ b/app/views/fncs/edit.html.erb
@@ -1,5 +1,4 @@
-<%= render "shared/bandeau", titre: "Modification", texte: "Mise à jour de la fiche" %>
+<%= render "shared/bandeau", titre: "Suivi de la fiche de non conformité", texte: "" %>
 <div class="container">
   <%= render 'form' %>
-  <%= destroy @fnc%>
 </div>
