navigation depuis fnc vers fournisseur et etb

--- a/app/views/etablissements/show.html.erb
+++ b/app/views/etablissements/show.html.erb
@@ -41,6 +41,6 @@
   <strong>Ville:</strong>
   <%= @etablissement.ville %>
 </p>
- <%= back etablissement_path(@etablissement) %>
+ <%= back etablissements_path %>
   <%= edit edit_etablissement_path(@etablissement) %>
 </div>
