--- a/app/views/fncs/index.html.erb
+++ b/app/views/fncs/index.html.erb
@@ -6,6 +6,7 @@
 <table class="table table-hover">
   <thead>
     <tr>
+      <th>Etat</th>
       <th>Numéro</th>
       <th>Date creation</th>
       <th>Raison litige</th>
@@ -18,6 +19,13 @@
   <tbody>
     <% @fncs.each do |fnc| %>
       <tr>
+        <td>
+          <% if fnc.etat %>
+            <span class="glyphicon glyphicon-ok"></span>
+          <% else %>
+            <span class="glyphicon glyphicon-pushpin"></span>
+          <% end %>
+        </td>
          <td><%=link_to fnc.id, fnc_path(fnc) %></td>
         <td><%= fnc.date_creation %></td>
         <td><%= fnc.raison_litige %></td>
