--- a/app/views/fncs/_observation_fields.html.erb
+++ b/app/views/fncs/_observation_fields.html.erb
@@ -1,10 +1,17 @@
-<div class="panel panel-primary">
-  <div class="panel-heading">
-    <h3 class="panel-title">Observations</h3>
+<% if f.object.new_record? %>
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <h3 class="panel-title">Observations</h3>
+    </div>
+    <div class="panel-body">
+      <%= f.text_area :message %>
+    <br/>
+    <%= f.link_to_remove "Supprimer l'observation" %>
+    </div>
   </div>
-  <div class="panel-body">
-  	<%= f.text_field :message %>
-<br/>
-<%= f.link_to_remove "Supprimer l'observation'" %>
-</div>
-</div>
+  <%  else %>
+       <%= render 'obs_etb_titulaire', obser: f.object %>
+  <% end %>
+
+
+
