--- a/app/views/fncs/index.html.erb
+++ b/app/views/fncs/index.html.erb
@@ -9,9 +9,8 @@
       <th>Numéro</th>
       <th>Date creation</th>
       <th>Raison litige</th>
-      <th>Numero commande</th>
       <th>Produits</th>
-      <th>Commande passee</th>
+      <th>Fournisseur</th>
  </tr>
   </thead>
   <tbody>
@@ -27,9 +26,8 @@
         <td><%=link_to fnc.id, fnc_path(fnc) %></td>
         <td><%= fnc.date_creation %></td>
         <td><%= fnc.raison_litige %></td>
-        <td><%= fnc.numero_commande %></td>
         <td><%= fnc.produits %></td>
-        <td><%= fnc.commande_passee %></td>
+        <td><%= fnc.fournisseur.nom %></td>
       </tr>
     <% end %>
   </tbody>
