--- a/app/views/fncs/_form.html.erb
+++ b/app/views/fncs/_form.html.erb
@@ -1,5 +1,17 @@
 <%= bootstrap_nested_form_for(@fnc) do |f| %>
 <%= render 'shared/model_errors', modele: @fnc %>
+
+<strong>ETAT</strong>
+<% unless @fnc.etat %>
+    <%= f.check_box :etat, label: 'Cocher pour cloturer la fiche ' %>
+<% else %>
+    <span class="glyphicon glyphicon-ok"></span>
+<% end %>
+
+
+<br/>
+<br/>
+
 <% if @fnc.new_record? %>
     <%= f.text_field :raison_litige, label: 'Raison du litige' %>
     <%= f.text_field :numero_commande, label: 'Numéro de commande' %>
@@ -23,16 +35,19 @@
     <%= f.collection_select :temperature_produit, %w[A B C], :to_s, :to_s, include_blank: true, label: 'Temperature produit' %>
     <%= f.collection_select :abs_tracabilite, %w[A B C], :to_s, :to_s, include_blank: true, label: 'Absence de tracabilité' %>
     <%= f.collection_select :tarification, %w[A B C], :to_s, :to_s, include_blank: true, label: 'Tarification' %>
-  <br/>
+    <br/>
     <% else %>
         <%= render 'fixed_elements'%>
     <% end %>
-    <%= f.fields_for :observations %>
-    <span class="glyphicon glyphicon-plus"></span>
-    <%= f.link_to_add "Observation supplémentaire", :observations %>
-    <br/>
-    <br/>
-    <br/>
-     <%= f.hidden_field :market_id, value: "#{@fnc.market.id}" %>
-    <%= f.submit %>
+    <% unless @fnc.etat %>
+        <%= f.fields_for :observations %>
+        <span class="glyphicon glyphicon-plus"></span>
+        <%= f.link_to_add "Observation supplémentaire", :observations %>
+        <br/>
+        <br/>
+        <br/>
+        <%= f.hidden_field :market_id, value: "#{@fnc.market.id}" %>
+        <%= f.submit %>
+    <% end %>
+
 <% end %>
