--- a/app/views/consultations/edit.html.erb
+++ b/app/views/consultations/edit.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/bandeau", titre: "Edition", texte: "Mise à jour d'une consultation" %>
 <div class="container">
   <%= render 'form' %>
-  <%= destroy @consultation %>
+  <!-- %= destroy @consultation % -->
 </div>
