--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,6 +17,6 @@
     </div>
     <!-- Appartenance est affectée par l'admin -->
     <!-- %= render partial:'appartenance', locals: {f: f} % -->
-    <%= f.submit 'Sign up', :class => 'button right' %>
+    <%= f.submit "Inscription", :class => 'button right' %>
   <% end %>
 </div>
