--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -2,11 +2,11 @@
 <% if user_signed_in? %>
   <li><%= link_to 'Consultations', consultations_path %></li>
   <li><%= link_to 'Fiches', fncs_path %></li>
-  <li><%= link_to 'Edit account', edit_user_registration_path %></li>
-  <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
+  <li><%= link_to 'Mon compte', edit_user_registration_path %></li>
+  <li><%= link_to 'Quitter', destroy_user_session_path, :method=>'delete' %></li>
 <% else %>
-  <li><%= link_to 'Sign in', new_user_session_path %></li>
-  <li><%= link_to 'Sign up', new_user_registration_path %></li>
+  <li><%= link_to 'Connection', new_user_session_path %></li>
+  <li><%= link_to "S'inscrire", new_user_registration_path %></li>
 <% end %>
 <% if user_signed_in? %>
   <% if current_user.admin? %>
