--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,10 @@
-<h3>Welcome</h3>
-<p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+<h3>Plateforme d'achat</h3>
+
+<p>Bienvenu sur la plateforme achat du groupement régional de commande (GRC)</p>
+<p>Veuillez-vous inscrire pour bénéficier du service</p>
+<p>Une fois votre compte validé, le GRC prendra contact avec vous afin de vérifier votre identité.</p>
+
+
+<p>
+    <%= link_to "S'inscrire", new_user_registration_path, class: "btn btn-primary" %>
+</p>
