--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,11 @@
       <table class="table">
         <tbody>
           <% @users.each do |user| %>
-            <tr>
+            <% unless user.confirmed? %>
+              <tr class="warning">
+            <% else %>
+              <tr>
+            <% end %>
               <%= render user %>
             </tr>
           <% end %>
