--- a/app/views/fncs/_form.html.erb
+++ b/app/views/fncs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_nested_form_for(@fnc) do |f| %>
+<%= bootstrap_nested_form_for([@marche, @fnc]) do |f| %>
 <%= render 'shared/model_errors', modele: @fnc %>
 
 <strong>ETAT</strong>
