--- a/app/views/fncs/_form.html.erb
+++ b/app/views/fncs/_form.html.erb
@@ -49,5 +49,5 @@
         <%= f.hidden_field :market_id, value: "#{@fnc.market.id}" %>
 
     <% end %>
-    <%= f.submit %>
+    <%= f.submit "Enregistrer" %>
 <% end %>
