--- a/app/views/fncs/show.html.erb
+++ b/app/views/fncs/show.html.erb
@@ -1,4 +1,4 @@
-<% if @fnc.etat %>
+<% if @fnc.cloturee %>
 <%= render "shared/bandeau", titre: "Fiche de non conformité Cloturée", texte: "La fiche étant cloturée, vous ne pouvez plus interagir." %>
   <% else %>
   <%= render "shared/bandeau", titre: "Fiche de non conformité", texte: "Liste des informations associées à la fiche de non conformité. Pour compléter, veuillez cliquer sur répondre" %>
@@ -10,7 +10,7 @@
   <%= render 'obs_etb_titulaire', obser: obser %>
 <% end %>
  <%= back fncs_path %>
-<% unless @fnc.etat %>
+<% unless @fnc.cloturee %>
   <%= link_to "Répondre", edit_fnc_path(@fnc), class: "btn btn-warning" %>
 <% end %>
 </div>
