--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,7 @@
       <% end %>
     </div>
     <fieldset>
-      <p>Leave these fields blank if you don't want to change your password.</p>
+      <p>Laissez les champs vides si vous ne souhaitez pas changer votre mot de passe</p>
       <div class="form-group">
         <%= f.label :password %>
         <%= f.password_field :password, :autocomplete => 'off', value: '', class: 'form-control' %>
@@ -23,7 +23,7 @@
       </div>
     </fieldset>
     <fieldset>
-      <p>You must enter your current password to make changes.</p>
+      <p>Vous devez rentrer votre mot de passe actuel pour effectuer les changements</p>
       <div class="form-group">
         <%= f.label :current_password %>
         <%= f.password_field :current_password, class: 'form-control' %>
@@ -35,7 +35,7 @@
   <% end %>
 </div>
 <div class="authform">
-  <h3>Cancel Account</h3>
-  <p>Unhappy? We'll be sad to see you go.</p>
-  <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button right' %>
+  <h3>Suppression de mon compte</h3>
+  <p>N'hesitez pas à nous contacter pour nous faire part de votre avis.</p>
+  <%= button_to "Suppression", registration_path(resource_name), :data => { :confirm => "Êtes-vous sûr ?" }, :method => :delete, :class => 'btn btn-danger button-right' %>
 </div>
