--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,13 @@
         <%= current_user.email %><br/>
         <%= current_user.entreprise.nom %>, (<%= current_user.entreprise_type.upcase %>)<br/>
       <% end %>
+
       <%= render 'layouts/messages' %>
       <%= yield %>
     </main>
+ <footer>
+        <p>&copy; GCS EPSILIM 2014</p>
+      </footer>
+
   </body>
 </html>
