--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,5 @@
 <%# navigation styled for Bootstrap 3.0 %>
+<% if user_signed_in? %>
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
@@ -8,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'AchatLim', root_path, class: 'navbar-brand' %>
+      <%= link_to image_tag("logo_fd_noir.png", border: 0, id: 'logo_achatlim'), root_path, class: 'navbar-brand' %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
@@ -17,3 +18,33 @@
     </div>
   </div>
 </nav>
+
+<% else %>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+              <%= link_to image_tag("logo_fd_noir.png", border: 0, id: 'logo_achatlim'), root_path, class: 'navbar-brand' %>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <%= form_for(:user, url: session_path(:user), html: {class: 'navbar-form navbar-right', role: 'form'}) do |f| %>
+            <div class="form-group">
+              <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Email' %>
+            </div>
+            <div class="form-group">
+              <%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: 'Password' %>
+            </div>
+            <%= f.submit "Connection", class: 'btn btn-warning' %>
+          <% end %>
+        </div><!--/.navbar-collapse -->
+
+      </div>
+    </nav>
+
+<% end %>
+
