--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,4 @@
 <%# navigation styled for Bootstrap 3.0 %>
-<% if user_signed_in? %>
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
@@ -12,27 +11,13 @@
       <%= link_to image_tag("logo_fd_noir.png", border: 0, id: 'logo_achatlim'), root_path, class: 'navbar-brand' %>
     </div>
     <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <%= render 'layouts/navigation_links' %>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<% else %>
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-              <%= link_to image_tag("logo_fd_noir.png", border: 0, id: 'logo_achatlim'), root_path, class: 'navbar-brand' %>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <%= form_for(:user, url: session_path(:user), html: {class: 'navbar-form navbar-right', role: 'form'}) do |f| %>
+      <% if user_signed_in? %>
+        <ul class="nav navbar-nav">
+          <%= render 'layouts/navigation_links' %>
+        </ul>
+      <% else %>
+        <% unless request.original_url =~ /users\/sign_in/ %> <!-- ne pas afficher si c est la page de login -->
+        <%= form_for(:user, url: session_path(:user), html: {class: 'navbar-form navbar-right', role: 'form'}) do |f| %>
             <div class="form-group">
               <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Email' %>
             </div>
@@ -40,11 +25,16 @@
               <%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: 'Password' %>
             </div>
             <%= f.submit "Connection", class: 'btn btn-warning' %>
+            <fieldset>
+               <label id="signin_remember_me">
+                <%= f.check_box :remember_me, class: 'check_box inline' %>Se souvenir de moi&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+               </label>
+            <%= link_to "Mot de passe oublié?", new_password_path(:user), class: 'help-inline forgot_password_nav' %>
+            </fieldset>
           <% end %>
-        </div><!--/.navbar-collapse -->
 
-      </div>
-    </nav>
-
-<% end %>
-
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+</nav>
